force-app/main/default/objects/ProdRatePlanCharge__c/ProdRatePlanCharge__c.object-meta.xml
<CustomObject>
    <label>Prod Charges</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prod Charges</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>