force-app/main/default/objects/ProdRatePlanCharge__c/fields/ChargeModel__c.field-meta.xml
<CustomField>
    <fullName>ChargeModel__c</fullName>
    <label>ChargeModel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>