force-app/main/default/objects/ProdRatePlanCharge__c/fields/ChargeType__c.field-meta.xml
<CustomField>
    <fullName>ChargeType__c</fullName>
    <label>ChargeType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>