force-app/main/default/objects/ProdRatePlanCharge__c/fields/EligibleOffre__c.field-meta.xml
<CustomField>
    <fullName>EligibleOffre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EligibleOffre</label>
    <type>Checkbox</type>
</CustomField>