force-app/main/default/objects/ProdRatePlanCharge__c/fields/FamilleRPC__c.field-meta.xml
<CustomField>
    <fullName>FamilleRPC__c</fullName>
    <label>FamilleRPC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>