force-app/main/default/objects/ProdRatePlanCharge__c/fields/ProdRatePlan__c.field-meta.xml
<CustomField>
    <fullName>ProdRatePlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProdRatePlan</label>
    <referenceTo>ProdRatePlan__c</referenceTo>
    <relationshipName>RatePlanCharges</relationshipName>
    <type>Lookup</type>
</CustomField>