force-app/main/default/objects/ProdRatePlanCharge__c/fields/ProductRatePlanZID__c.field-meta.xml
<CustomField>
    <fullName>ProductRatePlanZID__c</fullName>
    <label>ProductRatePlanZID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>