force-app/main/default/objects/ProdRatePlanCharge__c/fields/UpdatedZDate__c.field-meta.xml
<CustomField>
    <fullName>UpdatedZDate__c</fullName>
    <label>UpdatedZDate</label>
    <type>DateTime</type>
</CustomField>