force-app/main/default/objects/ProdRatePlanCharge__c/fields/zid__c.field-meta.xml
<CustomField>
    <fullName>zid__c</fullName>
    <label>zid</label>
    <length>32</length>
    <type>Text</type>
</CustomField>