force-app/main/default/objects/ProdRatePlanCharge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ProdRatePlan__c</columns>
    <columns>NAME</columns>
    <columns>ChargeModel__c</columns>
    <columns>ChargeType__c</columns>
    <columns>Reference__c</columns>
    <columns>FamilleRPC__c</columns>
    <columns>zid__c</columns>
    <columns>ProductRatePlanZID__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>