force-app/main/default/objects/ProdRatePlanCharge__c/listViews/Remises_des_offres.listView-meta.xml
<ListView>
    <fullName>Remises_des_offres</fullName>
    <columns>ProdRatePlan__c</columns>
    <columns>NAME</columns>
    <columns>ChargeModel__c</columns>
    <columns>ChargeType__c</columns>
    <columns>Reference__c</columns>
    <columns>EligibleOffre__c</columns>
    <columns>FamilleRPC__c</columns>
    <columns>ReferenceCIC__c</columns>
    <columns>zid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EligibleOffre__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Remises des offres</label>
</ListView>